Portfolio Update Jan 2025 V1

--- a/proj_AandK.html
+++ b/proj_AandK.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Kayaking</title>
+    <title>A&K Robotics</title>
     <meta name="description" content="Case study page of Project" />
 
     <link rel="stylesheet" href="css/style.css" />
@@ -21,8 +21,7 @@
         <div class="header__content">
             <div class="header__logo-container">
                 <div class="header__logo-img-cont">
-                    <img src="./assets/png/TH_transparent_2.png" alt="Ram Maheshwari Logo Image"
-                        class="header__logo-img" />
+                    <img src="./assets/png/TH_transparent_2.png" class="header__logo-img" />
                 </div>
                 <span class="header__logo-sub">Thomas Huckell</span>
             </div>
@@ -40,7 +39,7 @@
                         </a>
                     </li>
                     <li class="header__link-wrapper">
-                        <a href="./proj_KayakGuide.html#contact" class="header__link"> Contact </a>
+                        <a href="./proj_AandK.html#contact" class="header__link"> Contact </a>
                     </li>
                 </ul>
                 <div class="header__main-ham-menu-cont">
@@ -66,7 +65,7 @@
                     </li>
 
                     <li class="header__sm-menu-link">
-                        <a href="./proj_KayakGuide.html#contact"> Contact </a>
+                        <a href="./proj_AandK.html#contact"> Contact </a>
                     </li>
                 </ul>
             </div>
@@ -74,8 +73,15 @@
     </header>
     <section class="project-cs-hero">
         <div class="project-cs-hero__content">
-            <h1 class="heading-primary">Kayak Guide & Instructor</h1>
-
+            <h1 class="heading-primary">A&K Robotics</h1>
+            <div class="project-cs-hero__info">
+                <p class="text-primary">
+                    A&K Robotics is a start up with aim to revolutionize how people navigate large public spaces with an
+                    AI-enabled micro mobility pod Cruz. We are currently working with multiple airports like YVR to
+                    deploy the Cruz mobility pods in dynamic environments like airport terminals to assist those with
+                    mobility challenges get to their gates independently.
+                </p>
+            </div>
 
         </div>
     </section>
@@ -84,42 +90,91 @@
             <div class="project-details__content">
                 <div class="project-details__showcase-img-cont">
                     <figure>
-                        <img src="./assets/jpeg/Kayak Guiding.jpg" alt="Project Image"
+                        <img src="./assets/png/onSiteTest.png" alt="Project Image"
                             class="project-details__showcase-img" />
 
                     </figure>
                 </div>
                 <div class="project-details__content-main">
                     <div class="project-details__desc">
-
+                        <h3 class="project-details__content-title">Project Overview</h3>
                         <p class="project-details__desc-para">
-                            While working as a kayak guide and instructor I have developed leadership and teaching
-                            skills through instructing clients on paddling fundamentals in a range of paddling courses.
-                            Additionally, as a senior guide I helped with training and mentoring new staff on how to run
-                            the tours and lessons that Deep Cove Kayak offers.
+                            At A&K robotics I am a Hardware Engineer. In this role I am responsible for research and
+                            development, and the design and fabrication of the mechanical and electrical systems of the
+                            robots we build.
+                        </p>
+                        <p class="project-details__desc-para">
+                            The main focus of my work of at A&K robotics has been designing and building the Cruz
+                            mobility
+                            pod. This platform was custom built from the ground up to integrate with a suite of sensors,
+                            CPUs and Drive system that enable pod to navigate autonomously.
                         </p>
 
                         <p class="project-details__desc-para">
-                            When running large group tours and overnight school trips I often work with a team of guides
-                            to manage the group, and ensure all the clients are together, safe and having an enjoyable
-                            experience. Working collaboratively in dynamic costal conditions has bolstered my teamwork
-                            and communication, in addition to my
-                            incident management and risk assessment skills.
+                            During this project I was responsible for:
                         </p>
+                        <ul class="project-details__desc-list">
+                            <li class="circle">
+                                Designing steel chassis to integrate the drive system, external shell and sensors. This
+                                design was iterated upon and validated using static loading simulations using Finite
+                                Element
+                                Analysis.
+                            </li>
+
+                            <li class="circle">
+                                Designing the Pods plastic external shell. After finishing the design I then worked with
+                                overseas manufactures to achieve desired
+                                tolerance, finish and light diffusion.
+                            </li>
+
+                            <li class="circle">
+                                Designing and sourcing and fabricating the electrical power distribution and the
+                                Communication
+                                networks (CAN,Ethernet,USB,I2C).
+                            </li>
+
+                            <li class="circle">
+                                Designed the signal lighting diffusion and
+                            </li>
+
+                        </ul>
+
+                        <div class="project-details__med-img-cont">
+                            <figure>
+                                <img src="./assets/png/mobilityPod.png" alt="Project Image"
+                                    class="project-details__small-img" />
+                                <figcaption>
+                                    Cruz Mobility Pod At YVR.
+                                </figcaption>
+                            </figure>
+                        </div>
 
                         <p class="project-details__desc-para">
-                            It has been very rewarding being able to share my passion of paddling and the outdoors with
-                            others and am always excited to embark on my next paddling adventure.
+                            Working at a start up has taught me how to learn quickly as I constantly am required to fill
+                            a wide rage of roles. I have taken on a project management role with hardware design
+                            managing build schedule and purchasing to meet delivery targets. I also have to learn and
+                            work with ROS and Linux to assist with writing firmware and sensor testing in addition to on
+                            site operations, maintenance, debugging and
+                            diagnostics.
                         </p>
+
+
+                        <div class="project-details__med-img-cont">
+                            <figure>
+                                <img src="./assets/png/hardAtWork.png" alt="Project Image"
+                                    class="project-details__small-img" />
+                            </figure>
+                        </div>
+
+
                     </div>
                     <div class="project-details__tools-used">
-                        <h3 class="project-details__content-title">Skills Used</h3>
+                        <h3 class="project-details__content-title">Tools Used</h3>
                         <div class="skills">
-                            <div class="skills__skill">Leadership</div>
-                            <div class="skills__skill">Communication</div>
-                            <div class="skills__skill">Teamwork</div>
-                            <div class="skills__skill">Teaching</div>
-                            <div class="skills__skill">Incident Management</div>
+                            <div class="skills__skill">CAD</div>
+                            <div class="skills__skill">Mechatronics</div>
+                            <div class="skills__skill">ROS</div>
+                            <div class="skills__skill">Linux</div>
                         </div>
                     </div>
 
@@ -128,7 +183,7 @@
         </div>
     </section>
     <footer class="main-footer">
-        <div class="main-container">
+        <div class="main-container" id="contact">
             <div class="main-footer__upper">
 
                 <div class="main-footer__row main-footer__row-2">
