--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
       <h2 class="heading heading-sec heading-sec__mb-med">
         <span class="heading-sec__main">About Me</span>
         <span class="heading-sec__sub">
-          Hardworking and determined individual with a passion for robotics. I enjoy working hands on to design and
+          Hardworking and determined individual with a passion for robotics and mechanical design. I enjoy working hands
+          on to design and
           develop solutions to
           tackle complex problems.
 
@@ -121,25 +122,28 @@
         <div class="about__content-main">
           <h3 class="about__content-title">Get to know me!</h3>
           <div class="about__content-details">
-            <p class="about__content-details-para">
-              I'm a recent MASc graduate in robotics currently
-              living in Vancouver looking to start my career in the robotics
-              industry.
-            </p>
+
             <p class="about__content-details-para">
               I completed my BASc degree in Applied Mathematics and Mechanical Engineering
               at Queen's University. This program developed a strong theoretical background
               in modern controls and modeling of robotic systems.
             </p>
             <p class="about__content-details-para">
-              I completed my MASc degree at Queen's University under the supervision of
-              Amy Wu at Queen's University. My research utilizes optimal control methodologies
-              and reduced order models of legged systems to improve standing balance.
+              After my undergraduate degree I completed my MASc degree at Queen's University under the supervision of
+              Amy Wu at Queen's University. My
+              research utilizes optimal control methodologies and reduced order models of legged systems to improve
+              standing balance.
             </p>
             <p class="about__content-details-para">
-              Outside of work I enjoy being outdoors! I am an avid paddler who enjoys
-              kayaking and stand up paddleboarding. I also have a passion for woodworking
-              , specifically designing and building furniture.
+              Currently, I am working as a Robotics Hardware Engineer at A&K Robotics, where we are developing an
+              autonomous
+              single
+              person
+              transport to navigate airport terminals for individuals facing mobility challenges.
+            </p>
+            <p class="about__content-details-para">
+              Outside of work I enjoy being outdoors! I am an avid paddler who enjoys kayaking, stand up paddleboarding,
+              Skiing and Biking. I also have a passion for woodworking, specifically designing and building furniture.
             </p>
           </div>
           <a href="./index.html#contact" class="btn btn--med btn--theme dynamicBgClr">Contact</a>
@@ -154,13 +158,13 @@
             <div class="skills__skill">Data Analysis</div>
             <div class="skills__skill">Circuit Design</div>
             <div class="skills__skill">Rapid Prototyping</div>
-            <div class="skills__skill">Arduino</div>
-            <div class="skills__skill">Simulink</div>
+            <div class="skills__skill">Mechanical Design</div>
             <div class="skills__skill">CAD</div>
             <div class="skills__skill">MATLAB</div>
-            <div class="skills__skill">Python</div>
-            <div class="skills__skill">C++</div>
+            <div class="skills__skill">Simulink</div>
             <div class="skills__skill">ROS</div>
+            <div class="skills__skill">Python</div>
+            <div class="skills__skill">C/C++</div>
             <div class="skills__skill">LaTex</div>
           </div>
         </div>
@@ -177,19 +181,37 @@
       </h2>
 
       <div class="projects__content">
+
+        <div class="projects__row">
+          <div class="projects__row-img-cont">
+            <img src="./assets/jpeg/AandK_walking_with_pod.jpg" alt="AandK" class="projects__row-img" loading="lazy" />
+          </div>
+          <div class="projects__row-content">
+            <h3 class="projects__row-content-title">A&K Robotics</h3>
+            <h3 class="projects__row-content-subtitle">Mar 2023 - Present</h3>
+            <p class="projects__row-content-desc">
+              At A&K robotics I work as a Robotics Hardware Engineer. In this role I am responsible for the design of
+              the electrical and mechanical systems of an autonomous single person transport to assist individuals with
+              mobility challenges traverse airport terminals.
+            </p>
+            <a href="./proj_AandK.html" class="btn btn--med btn--theme dynamicBgClr">Learn More</a>
+          </div>
+        </div>
+
+
         <div class="projects__row">
           <div class="projects__row-img-cont">
             <img src="./assets/png/Portfolio Research Image.png" alt="Grad School" class="projects__row-img"
               loading="lazy" />
           </div>
           <div class="projects__row-content">
-            <h3 class="projects__row-content-title">Masters Thesis</h3>
+            <h3 class="projects__row-content-title">Masters Research</h3>
             <h3 class="projects__row-content-subtitle">Sept 2019 - April 2022</h3>
             <p class="projects__row-content-desc">
-              During my masters thesis I worked in the Biomechanics x Robotics Lab, which is a member of the
-              Ingenuity Labs Research Institute at Queen's University. The Institute is an interdisciplinary research
-              group with focus on AI, robotics and human machine interactions. My research focused
-              modeling and control of legged robots.
+              During my masters thesis I worked in the Biomechanics x Robotics Lab, which is a member of the Ingenuity
+              Labs Research Institute at Queen's University. The Institute is an interdisciplinary research group with
+              focus on AI, robotics and human machine interactions. My research focused modeling and control of legged
+              robots.
             </p>
             <a href="./proj_GradSchool.html" class="btn btn--med btn--theme dynamicBgClr">Learn More</a>
           </div>
@@ -273,7 +295,7 @@
           </div>
           <div class="projects__row-content">
             <h3 class="projects__row-content-title">Kayak Guide & Instructor</h3>
-            <h3 class="projects__row-content-subtitle">May 2017 - Feb 2023</h3>
+            <h3 class="projects__row-content-subtitle">May 2017 - Present</h3>
             <p class="projects__row-content-desc">
               I am an avid paddler who has worked as a guide and instructor out of Deep Cove Kayak. In this role I teach
               courses on sea kayaking and stand up paddle boarding as well as lead group tours through Say Nuth Khaw Yum
@@ -284,15 +306,31 @@
           </div>
         </div>
 
+        <div class="projects__row">
+          <div class="projects__row-img-cont">
+            <img src="./assets/jpeg/woodworking_tools.jpeg" alt="woodworking" class="projects__row-img"
+              loading="lazy" />
+          </div>
+          <div class="projects__row-content">
+            <h3 class="projects__row-content-title">Woodworking</h3>
+            <p class="projects__row-content-desc">
+              Outside of work I enjoying spending time working on new woodworking projects. These projects range from
+              custom furniture to a traditional greenland kayak paddle. In my projects I try and incorporate reclaimed
+              wood from job-sites and demolitions to reduce waste and my environmental footprint.
+            </p>
+            <a href="./proj_woodworking.html" class="btn btn--med btn--theme dynamicBgClr">Learn More</a>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
   <footer class="main-footer">
-    <div class="main-container">
+    <div class="main-container" id="contact">
       <div class="main-footer__upper">
 
 
-        <div class="main-footer__row main-footer__row-2" id="contact">
+        <div class="main-footer__row main-footer__row-2">
           <h4 class="heading heading-sm text-lt">Thomas Huckell</h4>
           <p class="main-footer__short-desc">
             tom.huckell@gmail.com
