--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </p>
             <p class="about__content-details-para">
               After my undergraduate degree I completed my MASc degree at Queen's University under the supervision of
-              Amy Wu at Queen's University. My
+              Amy Wu. My
               research utilizes optimal control methodologies and reduced order models of legged systems to improve
               standing balance.
             </p>
@@ -210,7 +210,8 @@
             <p class="projects__row-content-desc">
               During my masters thesis I worked in the Biomechanics x Robotics Lab, which is a member of the Ingenuity
               Labs Research Institute at Queen's University. The Institute is an interdisciplinary research group with
-              focus on AI, robotics and human machine interactions. My research focused modeling and control of legged
+              focus on AI, robotics and human machine interactions. My research focused on modeling and control of
+              legged
               robots.
             </p>
             <a href="./proj_GradSchool.html" class="btn btn--med btn--theme dynamicBgClr">Learn More</a>
@@ -260,8 +261,8 @@
             <p class="projects__row-content-desc">
               Queens Mostly Autonomous Sailboat Team (QMAST) is a student design team that
               designs and builds autonomous sailboats to compete at the International
-              Robotic Sailboat Regatta. During my undergraduate degree I was member of
-              Mechanical Team, starting as a general member, then moving up to the
+              Robotic Sailboat Regatta. During my undergraduate degree I was a member of
+              the mechanical Team, starting as a general member, then moving up to the
               role of Mechanical Team Manager.
             </p>
             <a href="./proj_QMAST.html" class="btn btn--med btn--theme dynamicBgClr">Learn More</a>
@@ -278,10 +279,10 @@
             <h3 class="projects__row-content-title">Teaching Experience</h3>
             <h3 class="projects__row-content-subtitle">Sept 2019 - May 2022</h3>
             <p class="projects__row-content-desc">
-              While at completing my MASc degree at Queen's university I was Teaching Assistant for
+              While completing my MASc degree at Queen's university I was Teaching Assistant for
               the mechatronics courses offered by the Mechanical and Materials Engineering department.
               In this role I taught the theory of electro-mechanical systems in addition
-              to organizing and facilitating labs where the students gain hands on experience programming
+              to organizing and facilitating labs where the students gained hands-on experience programming
               microcontrollers and constructing mechatronic systems.
             </p>
             <a href="./proj_TA.html" class="btn btn--med btn--theme dynamicBgClr">Learn More</a>
@@ -314,8 +315,8 @@
           <div class="projects__row-content">
             <h3 class="projects__row-content-title">Woodworking</h3>
             <p class="projects__row-content-desc">
-              Outside of work I enjoying spending time working on new woodworking projects. These projects range from
-              custom furniture to a traditional greenland kayak paddle. In my projects I try and incorporate reclaimed
+              Outside of work I enjoy spending time working on new woodworking projects. These projects range from
+              custom furniture to a traditional greenland kayak paddle. In my projects I try to incorporate reclaimed
               wood from job-sites and demolitions to reduce waste and my environmental footprint.
             </p>
             <a href="./proj_woodworking.html" class="btn btn--med btn--theme dynamicBgClr">Learn More</a>
