--- a/proj_ELEC848.html
+++ b/proj_ELEC848.html
@@ -131,7 +131,7 @@
               identifiable parameters are continuously excited. With this trajectory three training data sets were
               recorded
               and the noisy joint acceleration data was processed with a gaussian filter. A least square regression was
-              performed all three data sets to estimate the dynamic parameters.
+              performed on all three data sets to estimate the dynamic parameters.
             </p>
             <div class="project-details__small-img-cont">
               <figure>
