--- a/proj_KayakGuide.html
+++ b/proj_KayakGuide.html
@@ -102,7 +102,7 @@
                         <p class="project-details__desc-para">
                             When running large group tours and overnight school trips I often work with a team of guides
                             to manage the group, and ensure all the clients are together, safe and having an enjoyable
-                            experience. Working collaboratively in dynamic costal conditions has bolstered my teamwork
+                            experience. Working collaboratively in dynamic coastal conditions has bolstered my teamwork
                             and communication, in addition to my
                             incident management and risk assessment skills.
                         </p>
