--- a/proj_MECH816.html
+++ b/proj_MECH816.html
@@ -78,7 +78,7 @@
         <p class="text-primary">
           A Kalman Filter is a useful tool to create a probabilistic way of recursively updating a systems state from
           noisy measurements using a model of the measurement
-          process and system dynamics to minimize error. This filtering method was used on a smartphones IMU sensor to
+          process and system dynamics to minimize error. This filtering method was used on a smartphone's IMU sensor to
           develop a way of accurately measuring body movements with the readily available sensors in our smartphones.
           More accessible methods of measuring body movement will
           make it easier to record and study high risk tasks for musculoskeletal injuries in remote or developing
@@ -95,7 +95,7 @@
         <div class="project-details__showcase-img-cont">
           <figure>
             <img src="./assets/png/MECH816 setup.png" alt="Project Image" class="project-details__showcase-img" />
-            <figcaption>Smartphone location for experiment using simple excercise case (left) and recorded raw and
+            <figcaption>Smartphone location for experiment using simple exercise case (left) and recorded raw and
               filtered Euler angles during simulated hand loom motions. </figcaption>
           </figure>
         </div>
