--- a/proj_QMAST.html
+++ b/proj_QMAST.html
@@ -107,7 +107,7 @@
               positioned at the appropriate distances using a support frame with the voids between profiles filled with
               foam then faired to match the desired contours. The plug was then
               prepped for a fiberglass layup to create a mold for the hull. The mold was then used to create
-              the hulls shell which was fabricated with carbon fiber and reinforced with bulkheads for added
+              the hull's shell which was fabricated with carbon fiber and reinforced with bulkheads for added
               structural support and to mount electro-mechanical systems.
             </p>
           </div>
