--- a/proj_TA.html
+++ b/proj_TA.html
@@ -78,7 +78,7 @@
         <p class="text-primary">
           While completing my MASc degree, I worked as a Teaching Assistant for the mechatronics courses. My duties
           included teaching the course contents in tutorials, grading submitted coursework and running the labs where
-          students got hands on experience working with microcontrollers to constuct and test electro-mechanical
+          students got hands-on experience working with microcontrollers to construct and test electro-mechanical
           systems. For my teaching in
           the 2020-2021 year I was recognized with the "Dean's Teaching Assistant Award".
 
@@ -111,7 +111,7 @@
             <h1 class="project-details__content-subtitle-sub">Winter 2020, Winter 2021 (Head TA), Winter 2022 (Head TA)
             </h1>
             <p class="project-details__desc-para">
-              As TA for MECH 210 I taught circuit analysis techniques of RLC circuits in tutorial sessions. Theses
+              As TA for MECH 210 I taught circuit analysis techniques of RLC circuits in tutorial sessions. These
               methods are then used
               to characterize the behavior of common mechatronic circuits; transformers, diodes, solenoids, DC motors
               and
