--- a/proj_woodworking.html
+++ b/proj_woodworking.html
@@ -103,7 +103,7 @@
                             demolition of an old bowling alley. These pieces were in rough shape after all the years of
                             wear and the demolition process. The reclaimed sections were split in half to more
                             manageable pieces to
-                            resurface into useable tabletops.
+                            resurface into usable tabletops.
                         </p>
                         <div class="project-details__med-img-cont">
                             <figure>
@@ -198,7 +198,8 @@
                                 href="http://www.thewoodshop.20m.com/graphics/kayak/greenland_03.pdf" class="body">
                                 guide </a> by
                             Chuck
-                            Holst which outlines build process from material selection to taking your own measurements
+                            Holst which outlines the build process from material selection to taking your own
+                            measurements
                             to make the paddle custom length for yourself.
                         </p>
                         <div class="project-details__med-img-cont">
