--- a/proj_AandK.html
+++ b/proj_AandK.html
@@ -76,7 +76,8 @@
             <h1 class="heading-primary">A&K Robotics</h1>
             <div class="project-cs-hero__info">
                 <p class="text-primary">
-                    A&K Robotics is a start up with aim to revolutionize how people navigate large public spaces with an
+                    A&K Robotics is a start up with the aim to revolutionize how people navigate large public spaces
+                    with an
                     AI-enabled micro mobility pod Cruz. We are currently working with multiple airports like YVR to
                     deploy the Cruz mobility pods in dynamic environments like airport terminals to assist those with
                     mobility challenges get to their gates independently.
@@ -104,10 +105,10 @@
                             robots we build.
                         </p>
                         <p class="project-details__desc-para">
-                            The main focus of my work of at A&K robotics has been designing and building the Cruz
+                            The main focus of my work at A&K robotics has been designing and building the Cruz
                             mobility
                             pod. This platform was custom built from the ground up to integrate with a suite of sensors,
-                            CPUs and Drive system that enable pod to navigate autonomously.
+                            CPUs and Drive system that enable the pod to navigate autonomously.
                         </p>
 
                         <p class="project-details__desc-para">
@@ -133,10 +134,6 @@
                                 networks (CAN,Ethernet,USB,I2C).
                             </li>
 
-                            <li class="circle">
-                                Designed the signal lighting diffusion and
-                            </li>
-
                         </ul>
 
                         <div class="project-details__med-img-cont">
@@ -150,12 +147,12 @@
                         </div>
 
                         <p class="project-details__desc-para">
-                            Working at a start up has taught me how to learn quickly as I constantly am required to fill
-                            a wide rage of roles. I have taken on a project management role with hardware design
+                            Working at a start-up has taught me how to learn quickly as I constantly am required to fill
+                            a wide range of roles. I have taken on a project management role with hardware design,
                             managing build schedule and purchasing to meet delivery targets. I also have to learn and
                             work with ROS and Linux to assist with writing firmware and sensor testing in addition to on
-                            site operations, maintenance, debugging and
-                            diagnostics.
+                            site operations, maintenance, debugging and diagnostics.
+
                         </p>
 
 
